--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.rnemykin.spring.boot</groupId>
+            <artifactId>json-schema-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -49,6 +54,12 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.github.java-json-tools</groupId>-->
+            <!--<artifactId>json-schema-validator</artifactId>-->
+            <!--<version>2.2.10</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
